# message-of-the-day

./: LICENSE  README.md  messages.json  pyproject.toml  subtitles.json
util/: messages_json_initializer.ipynb  subtitles_json_initializer.ipynb
