[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Drake Guan", email = "drake.guan@gmail.com"},
]
dependencies = [
    "jupyter~=1.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
